# ORB_SLAM3

./: .gitmodules  CMakeLists.txt  README.md
python_wrapper/: CMakeLists.txt  euroc_pipeline.py  orb_slam3.py  orb_slam3_pybind.cpp  orb_slam3_pybind.h  tum.py  tum_pipeline.py
python_wrapper/datasets/: euroc.py  tum.py
